Tue Jan 11 18:57:28 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_union/discriminant_ci.cpp(visit_enum):

          When generating a default discriminant value of -1 (all
          enum values are used in union cases), changed the cast
          (to the enum type) from C-style to C++ style static_cast<>.
          Thanks to Milan Cvetkovic <milan dot cvetkovic at mpathix dot com>
          for the suggestion.

Tue Jan 11 07:09:15 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/InterfaceRepo/IFR_Test/Admin_Client.cpp:
        * tests/Alt_Mapping/ub_struct_seq.cpp:
        * tests/DynAny_Test/test_dynany.cpp:
          Use ACE::is_equal() to compare floating point values.

Mon Jan 10 14:02:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/OctetSeq/client.cpp:
        * tests/Param_Test/anyop.cpp:
          Use ACE::is_equal() to compare floating point values.

Wed Jan  5 13:14:09 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
          Fixed crash during Naming Server finalization that was happening
          when it didn't start properly and POA was not initialized.

Mon Jan  3 14:12:04 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/LongDouble/client.cpp:
          Reverted change "Fri Dec 31 09:12:53 UTC 2010  Olli Savia  <ops@iki.fi>"
          which broke 32-bit builds.

Sat Jan  1 10:48:07 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Notify/lib/Task_Stats.cpp:
          Added missing include.

Fri Dec 31 09:12:53 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/examples/LoadBalancing/server.cpp:
        * orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:
        * orbsvcs/tests/Notify/lib/Task_Stats.cpp:
        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
        * orbsvcs/tests/unit/Trading/Interpreter/Interpreter.cpp:
        * tests/CDR/alignment.cpp: